# mako-for-django

./: .editorconfig  .gitignore  .shellcheckrc  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
e2e/: Makefile  README.md  manage.py  mypy.ini  pyproject.toml  ruff.toml
e2e/src/django_mako_e2e/: __init__.py  __patch__.py  __version__.py
e2e/src/django_mako_e2e/conf/: settings.py  urls.py
e2e/src/django_mako_e2e/inet/entrypoints/: asgi.py  wsgi.py
e2e/src/django_mako_e2e/mako/: layout.html.mako
e2e/src/django_mako_e2e/modules/samples/apps/: __init__.py  samples_config.py
e2e/src/django_mako_e2e/modules/samples/conf/: urls.py
e2e/src/django_mako_e2e/modules/samples/mako/samples/components/clsx-integration/: card.html.mako
e2e/src/django_mako_e2e/modules/samples/mako/samples/layouts/: catalog.html.mako
e2e/src/django_mako_e2e/modules/samples/mako/samples/partial/: class-based.html.mako  functional.html.mako
e2e/src/django_mako_e2e/modules/samples/mako/samples/views/: clsx-integration.html.mako  component-system.html.mako  index.html.mako  partial-rendering.html.mako  readme.html.mako
e2e/src/django_mako_e2e/modules/samples/tests/: __init__.py
e2e/src/django_mako_e2e/modules/samples/tests/views/: __init__.py  class_based_partial_rendering_view_test_case.py  functional_partial_rendering_view_test_case.py
e2e/src/django_mako_e2e/modules/samples/views/: __init__.py  class_based_partial_rendering_view.py  clsx_integration_view.py  component_system_view.py  functional_partial_rendering_view.py  index_view.py  readme_view.py
hack/env/: bash.sh
(+8 files in other folders)
